2007-11-04  Per Bothner  <per@bothner.com>

	* SetExp.java (compile): If we compile a field reference,
	then we need to note it's a usedClass.

	* LambdaExp.java (evalDefaultArg): New convenience method.
	(Closure.matchN): Add handling for keyword parameters.

2007-10-21  Per Bothner  <per@bothner.com>

	* FindCapturedVars.java (walkApplyExp): Add an optimization which also
	seems to fix Savavvan bug #21363: "ArrayIndexOutOfBoundsException when
	compiling define-simple-class."

2007-09-02  Per Bothner  <per@bothner.com>

	* ModuleContext.java (searchInstance): New method.

	* Declaration.java (setTypeExp): Recognize a quoted Class.

	* Declaration.java (printInto): Add some commented-out debug printing.

2007-06-10  Per Bothner  <per@bothner.com>

	* TypeValue.java: Fix thinko for JAVA5 case.

2007-04-27  Per Bothner  <per@bothner.com>

	* Language.java (loadClass): Invoke ClassMemberLocation.defineAll
	rather than this.defineAll.
	(defineAll, defineFromFieldValue): Removed methods.
	* ModuleBody.java (runAsMain): Update invocation of 
	ClassMemberLocation.defineAll by padding default Language..

2007-04-26  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalToClass): If internal exception is thrown,
	re-throw as a SyntaxException.

	* ApplyExp.java (compile, compileToArray, pushArgs): Use
	compileWithPosition rather than compile, for arguments.
	* LetExp.java (compile): Likewise, for init expression.

2007-04-25  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (mapClassToInfo): New static WeakHashMap.
	(moduleClass): Make private.
	(getModuleClassRaw, setModuleClass): New methods.
	(find): Change parameter to ClassType.
	If isExisting, first try ModuleManager.findWithClass.
	* ModuleManager.java (findWithClass): Make static.  Search
	in ModuleInfo.mapClassToInfo.
	(findWithClassType): Remove function.
	(findWithClassName):  Re-implement - first try searchWithClassName,
	but if no match load Class and try findWithClass.